# vibe-project

./: README.md  commit-template.txt  create-git-hook.sh  initial-setting.sh
.github/: pull_request_template.md
backend/: .env.example  README.md  pyproject.toml  setup-backend.sh  test_db.py  test_solar.py  test_vector_db.py
backend/app/: main.py
backend/app/api/routes/: idea.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  database.py  db.py  db_init.py
backend/app/llm/: solar_client.py  solar_langchain.py
backend/app/llm/chains/: create_idea_card.py  idea_chain.py
backend/app/models/: idea.py  idea_metadata.py  idea_vectors.py
backend/app/utils/: retry.py
backend/tests/: test_db.py  test_idea_generate.py  test_solar.py  test_vector_db.py
frontend/: package-lock.json
